on the way to 2017

--- a/actdocs/static/accommodation.html
+++ b/actdocs/static/accommodation.html
@@ -1,11 +1,24 @@
 [% WRAPPER ui title = global.conference.name %]
 
-<h2>The hackathon hotel</h2>
+<h1>[% title %] in Lyon</h1>
 
-<p>
-The hotel we selected for the hackathon is:
-<a href="http://www.booking.com/hotel/fr/campanile-lyon-centre-forum-part-dieu.html?aid=313263">Campanile Lyon Centre Part-Dieu</a>.
-It's located 31 rue Maurice Flandrin, at La Part-Dieu.
+<h2>The Venue</h2>
+
+  <p>
+    The Perl Toolchain Summit will be held in 
+    <a href="http://www.booking.com/hotel/fr/campanile-lyon-centre-forum-part-dieu.html?aid=313263">Campanile Lyon Centre Part-Dieu</a>.
+    It's located 31 rue Maurice Flandrin, at La Part-Dieu.
+    <br />
+  <p>
+
+  <p>The 
+  <a href="http://www.booking.com/hotel/fr/campanile-lyon-centre-forum-part-dieu.html?aid=313263">Campanile Lyon Centre Part-Dieu</a>
+  is also the "hackathon hotel", allowing hard workers to easily switch from their room to their "office".
+  <br />
+  (Proximity of the work place and hotel was a request from the previous editions).
+  <br />
+  It is located in front of the railway station La Part-Dieu.
+  </p>
 
 <h2>Coming to Lyon</h2>
 
