--- a/actdocs/static/sponsors.html
+++ b/actdocs/static/sponsors.html
@@ -35,7 +35,7 @@ In order to help cover these costs we would are delighted to receive donations o
 
 <p>
 This year the hackathon is hosted in the
-<a href="[% make_uri('venue.html') %]">Lyon office</a> of
+<a href="[% make_uri('accommodation.html') %]">Lyon office</a> of
 <a href="http://www.booking.com/?aid=313263">Booking.com</a>.
 </p>
 
