--- a/actdocs/static/pqah.html
+++ b/actdocs/static/pqah.html
@@ -3,7 +3,7 @@
 
 <div class="page-header">
 <h1>
-     Visit former PQAH's web sites!
+     Visit former PTS's web sites!
 </h1>
 </div>
 
@@ -14,6 +14,9 @@
 <dd><a href="http://2011.qa-hackathon.org/">Amsterdam 2011</a></dd>
 <dd><a href="http://2012.qa-hackathon.org/">Paris 2012</a></dd>
 <dd><a href="http://2013.qa-hackathon.org/">North West England 2013</a></dd>
+<dd><a href="http://act.qa-hackathon.org/qa2014">Lyon 2014</a></dd>
+<dd><a href="http://act.qa-hackathon.org/qa2015">Berlin 2015</a></dd>
+<dd><a href="http://act.qa-hackathon.org/qa2016">Rugby 2016</a></dd>
         </dl>
 
 [% END %]
