on the way to 2017

--- a/actdocs/static/budget.html
+++ b/actdocs/static/budget.html
@@ -112,49 +112,16 @@ table.financial_report {
         ],
         [ 'Corporate sponsors',
 		    [ 'WenZPerl B.V.' ,'1000' ],
-		    [ 'Splio' ,'2000' ],
 		    [ 'Booking.com' ,'5000' ],
-		    [ '?Dyn' ,'0', '2000' ],
-		    [ 'Eligo' ,'', '', '250' ],
-		    [ '?Evozon' ,'500', '', '' ],
-		    [ 'Campus Explorer' ,'500', '', '' ],
-		    [ 'Grant Street Group' ,'', '800', '' ],
-		    [ 'elasticsearch' ,'730', '', '' ],
         ],
         [ 'In-kind donations',
-            [ "=Booking.com", 'Venue' ],
-            [ '=Booking.com', "Travel and accommodation for Damien Krotkine (dams)" ],
-            [ '=PROCURA',    "Travel and accommodation for H.Merijn Brand (Tux)" ],
-            [ "=friprog.no", 'Travel and accommodation for Salve J. Nilsen (sjn)' ],
-            [ "=madeinlove.co.uk", 'Travel for Barbie' ],
             [ '=WenZPerl B.V.', "Travel and accommodation for Liz and Wendy" ],
-            [ '=WenZPerl B.V.', "Travel and accommodation for Tobias Leich (froggs)" ],
-            [ '=The Perl Foundation', "Travel and accommodation for David Golden (xdg)" ],
-            [ '=The Perl Foundation', "Travel and accommodation for Ricardo Signes (rjbs)" ],
        ],
     ];
 
    expenses = [
         [ 'Accommodation',
             [ '1 room, 2014-03-12 → 2014-03-16 (participant pays for half the room)', '134.00' ], # pjcj
-            [ '1 room, 2014-03-12 → 2014-03-16', '268.00' ], # elbeho
-            [ '2 rooms, 2014-03-12 → 2014-03-16 (participants pay for half the room)', '382.50' ], # timb, ether
-            [ '3 rooms, 2014-03-12 → 2014-03-16', '804.00' ], # oalders + neilb, dams + maddingue, andk + slaven
-            [ '1 room, 2014-03-12 → 2014-03-17 (participant pays for half the room)', '131.50' ], # abeltje
-            [ '1 room, 2014-03-12 → 2014-03-17', '323.00' ], # barbie + ?
-            [ '1 room, 2014-03-12 → 2014-03-17 (participant pays for half the room)', '182.75' ], # sjn + ribasushi
-            [ '4 rooms, 2014-03-12 → 2014-03-17', '1292.00' ], # rjbs + xdg, mithaldu + mst, charsbar + haarg, tux + leont
-            [ '1 room, 2014-03-12 → 2014-03-17 (plus two extra days paid by participant)', '365.50' ], # alh (pay 185.30)
-            [ '?Remaining hotel costs', '500.00' ],
-# booked but paid by others:
-# 2014-03-12 → 2014-03-16: 134.00 EUR: pjcj (half the room)
-# 2014-03-12 → 2014-03-17: 131.50 EUR: abeltje (half the room)
-# 2014-03-12 → 2014-03-17: 191.25 EUR: timb
-# 2014-03-12 → 2014-03-17: 191.25 EUR: ether
-# 2014-03-12 → 2014-03-17: 182.75 EUR: sjn (half the room)
-# 2014-03-12 → 2014-03-17: 323.00 EUR: rjbs + xdg
-# 2014-03-12 → 2014-03-17: 323.00 EUR: froggs
-# 2014-03-12 → 2014-03-17: 382.50 EUR: sno (pays the whole room)
 # 2014-03-12 → 2014-03-19: 185.30 EUR: alh (two extra days)
         ],
         [ 'Catering',
@@ -168,20 +135,6 @@ table.financial_report {
         ],
         [ 'Travel refunds',
             [ 'Karen Etheridge (Ether)',    '', '1100.00' ],
-            [ 'Christian Walde (Mithaldu)', '187.00' ],
-            [ 'Leon Timmermans (leont)',     '230.00' ],
-            [ 'Abe Timmerman (abeltje)',     '230.00' ],
-            [ 'Matthew Horsfall (alh)',      '',      '1100.00' ],
-            [ 'Peter Rabbitson (ribasushi)', '128.99' ],
-            [ 'Kenichi Ishigaki (charsbar)', '568.00' ],
-            [ 'Graham Knop (haarg)',        '',      '1000.00' ],
-            [ 'Olaf Alders (oalders)',       '',      '1100.00' ],
-            [ 'Paul Johnson (pjcj)',         '180.00' ],
-            [ 'Curtis Poe (Ovid)', '326.30' ],
-            [ 'Neil Bowers', '', '', '317.00' ],
-            [ 'Olivier Mengué', '146.00' ],
-            [ 'Sébastien Perghis-Tramoni', '130.00' ],
-            [ '?Remaining travel costs',     '500.00' ],
         ],
         [ 'Misc',
             [ '?Estimate',                '100.00' ],
@@ -189,7 +142,7 @@ table.financial_report {
    ]
 %]
 
-<h1>The hackathon budget</h2>
+<h1>The toolchain summit budget</h2>
 
 <p>
 This is the temporary budget. It has 3 columns,
