--- a/actdocs/static/index.html
+++ b/actdocs/static/index.html
@@ -1,6 +1,6 @@
 [% WRAPPER ui title = global.conference.name %]
 
-<h1>[% title %] in Lyon</h1>
+<h1>[% global.conference.name %] in Lyon</h1>
 
 <h2>What is the Perl Toolchain Summit?</h2>
 
@@ -32,7 +32,7 @@ that have a direct benefit to the Perl language.
 
 <p>The Perl Toolchain Summit is a four day event that takes place from Thursday <b>May 11<sup>th</sup></b>
 to Sunday <b>May, 14<sup>th</sup> 2014</b>, all the day long.</p>
-<p>The [% title %] will be held in the beautiful city of Lyon, France, at the
+<p>The [% global.conference.name %] will be held in the beautiful city of Lyon, France, at the
 <a href="http://www.booking.com/hotel/fr/campanile-lyon-centre-forum-part-dieu.html?aid=313263">Campanile Lyon Centre Part-Dieu</a>.
 </p>
 
