--- a/actdocs/static/pqah.html
+++ b/actdocs/static/pqah.html
@@ -1,4 +1,4 @@
-[% title = { en => "Former PQAH" } ;
+[% title = { en => "Former PTS" } ;
    WRAPPER ui title = title.${global.request.language} %]
 
 <div class="page-header">
