--- a/actdocs/static/donate.html
+++ b/actdocs/static/donate.html
@@ -9,8 +9,8 @@ You're a Perl user. You appreciate the quality of the language. You
 think it worth to invest some money to have help these people make
 Perl and CPAN even better...
 </p><p>
-The money that will not be used for the Perl QA Hackthon 2014
-will be donated for the Perl QA Hackathon 2015.
+The money that will not be used for the Perl Toolchain Summit 2017
+will be donated for the Perl Toolchain Summit 2018.
 </p><p>
 You can get a good idea of how much money we need and what it will be used
 for by looking at our <a href="[% make_uri('budget.html')%]">preliminary
@@ -23,20 +23,19 @@ budget</a>.
 Choose the button (you'll be redirected to Paypal) and select the amount:</p>
 
 [% paypal = [
-      [ 'EUR (€)', "E7AJVXADSZGA4" ],
-      [ 'USD ($)', "4GFLJHAC2ZZGW" ],
-      [ 'GBP (£)', "3NX2USRP3QQZE" ],
+      [ 'EUR (€)', "KYBLEGX8RMG2J" ],
+      [ 'USD ($)', "DTFUFWKK5Y4F2" ],
+      [ 'GBP (£)', "URS5VUBPQGG7C" ],
    ];
    FOREACH item = paypal
 %]
 <p>
-  <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
     <input type="hidden" name="cmd" value="_s-xclick">
     <input type="hidden" name="hosted_button_id" value="[% item.1 %]">
-    <input type="image" src="https://www.paypalobjects.com/en_GB/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal – The safer, easier way to pay online."> in [% item.0 %]
+    <input type="image" src="https://www.paypalobjects.com/en_GB/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal – The safer, easier way to pay online!"> in [% item.0 %]
     <img alt="" border="0" src="https://www.paypalobjects.com/fr_FR/i/scr/pixel.gif" width="1" height="1">
-  </form>
-
+</form>
 </p>
 [% END %]
 
