--- a/actdocs/static/sponsors.html
+++ b/actdocs/static/sponsors.html
@@ -52,6 +52,7 @@ Since 1996, <a href="https://cpanel.com/">cPanel, Inc.i</a> has been delivering 
 
 <a href="https://www.maxmind.com/"><img class="icon" src="[% make_uri('pix/logo-maxmind.png') %]" width="250" alt="MaxMind" title="MaxMind"></a><br>
 <p>
+&nbsp;
 </p>
 
 <hr>
