--- a/actdocs/static/sponsors.html
+++ b/actdocs/static/sponsors.html
@@ -47,12 +47,16 @@ Since 1997, <a href="http://www.activestate.com">ActiveState</a> has been provid
 
 <a href="https://cpanel.com/"><img class="icon" src="[% make_uri('pix/logo-cpanel.png') %]" width="250" alt="cPanel" title="cPanel"></a><br>
 <p>
-Since 1996, <a href="https://cpanel.com/">cPanel, Inc.i</a> has been delivering the web hosting industry’s most reliable, intuitive control panel. The robust automation software helps businesses thrive and allows them to focus on more important things. Customers and partners receive first-class support and a rich feature set, making cPanel &amp; WHM the hosting platform of choice.
+Since 1996, <a href="https://cpanel.com/">cPanel, Inc</a> has been delivering the web hosting industry’s most reliable, intuitive control panel. The robust automation software helps businesses thrive and allows them to focus on more important things. Customers and partners receive first-class support and a rich feature set, making cPanel &amp; WHM the hosting platform of choice.
 </p>
 
 <a href="https://www.maxmind.com/"><img class="icon" src="[% make_uri('pix/logo-maxmind.png') %]" width="250" alt="MaxMind" title="MaxMind"></a><br>
 <p>
-&nbsp;
+Founded in 2002, <a href="https://www.maxmind.com/en/home">MaxMind</a> is an industry-leading provider of IP intelligence and online fraud detection services.
+Thousands of companies of all sizes rely on <a href="https://www.maxmind.com/en/geoip2-services-and-databases">MaxMind's GeoIP</a> geolocation and end-user 
+data for fraud prevention, ad targeting, content customization, digital rights management, and more. i
+Maxmind's <a href="https://www.maxmind.com/en/minfraud-services">minFraud Network</a> leverages this data along with IP and email reputations established 
+from over 100 million transactions per month to help merchants prevent fraudulent online transactions and account registrations.
 </p>
 
 <hr>
