Update Rhonexpress/taxi prices

--- a/actdocs/static/accommodation.html
+++ b/actdocs/static/accommodation.html
@@ -30,9 +30,10 @@
   shuttle from the airport makes for an easy ride to the Part-Dieu station
   (the stop is right between the train station and the hotel). Shuttles
   depart every 15 minutes, and the ride takes less than 30 minutes and
-  costs €14.50 for a single and €25.50 for a return ticket.
-  You can buy tickets in advance at the <a href="http://www.rhonexpress.fr/">official website</a>.</p>
-  <p>A taxi to Part-Dieu would cost bout €40, for about the same transit time,
+  costs €15.90 for a single and €75.50 for a return ticket.
+  You can buy tickets in advance at the <a href="http://www.rhonexpress.fr/">official website</a>,
+  at the vending machines in the station, or even in the shuttle itself (but with an extra charge).</p>
+  <p>A taxi to Part-Dieu would cost about €50, for about the same transit time,
   so it's only really worth it if there are 3 or 4 people sharing the ride.</p>
 
   <h3>By train</h3>
