--- a/actdocs/static/sponsors.html
+++ b/actdocs/static/sponsors.html
@@ -87,6 +87,19 @@ By offering the best of traditional databases as well as the flexibility, scale,
 
 <p><a href="http://capside.com/en/">CAPSiDE</a> is a systems engineering company specialized in technological consulting and professional services, counting with expert engineers about high availability systems, networks and software developing.</p>
 
+<p><b>WenzPerl</b> is the company of Liz and Wendy. They sponsored this PTS in the name of the <a href="http://www.perl6.org/">Perl 6</a> Community.<br />
+      Camelia is the spokesbug for <a href="http://www.perl6.org/">Perl 6</a>, the spunky little sister of
+      Perl 5. Like her world-famous big sister, Perl 6 intends to carry
+      forward the high ideals of the Perl community.
+      <br />
+      <p>
+      Perl 6 is currently being developed by a team of dedicated and
+      enthusiastic volunteers. You can help too. The only requirement
+      is that you know how to be nice to all kinds of people (and
+      butterflies).<br />
+      Go to #perl6 (irc.freenode.net) and someone will be glad to help you get started.
+      </p>
+
 <!-- commited
 <p>Bytemark</p>
 -->
