cleanup menus/wiki and add links to results and photos on the main page

--- a/actdocs/static/index.html
+++ b/actdocs/static/index.html
@@ -36,6 +36,21 @@ to Sunday <b>May, 14<sup>th</sup> 2017</b>, all the day long.</p>
 <a href="http://www.booking.com/hotel/fr/campanile-lyon-centre-forum-part-dieu.html?aid=313263">Campanile Lyon Centre Part-Dieu</a>.
 </p>
 
+<h2>Results and souvenirs...</h2>
+
+<p>
+   During 4 days (and sometimes nights) of hard work, of meetings, of discussions, lots of
+   things happened.
+</p>
+<p>
+   Check the <a href="[% make_uri('wiki?node=Results') %]">results</a> page on the wiki.
+</p>
+<p>
+    Lee was the <i>official</i> photgrapher of the event.<br/>
+	Pictures are <a href="https://www.flickr.com/gp/101485128@N06/R9Aj0F">here</a>.
+</p>
+
+
 [% news = global.news(4);
    IF news.size > 3;
      more = news.pop;
