--- a/actdocs/static/index.html
+++ b/actdocs/static/index.html
@@ -17,13 +17,13 @@ that have a direct benefit to the Perl language.
 <ul>
 <li><a href="http://2008.qa-hackathon.org/2008">Oslo 2008</a></li>
 <li><a href="http://2009.qa-hackathon.org/">Birmingham 2009</a></li>
-<li><a href="http://act.qa-hackathon.org/qa2010">Vienna 2010</a></li>
-<li><a href="http://act.qa-hackathon.org/qa2011">Amsterdam 2011</a></li>
-<li><a href="http://act.qa-hackathon.org/qa2012">Paris 2012</a></li>
-<li><a href="http://act.qa-hackathon.org/qa2013">North West England 2013</a></li>
-<li><a href="http://act.qa-hackathon.org/qa2014">Lyon 2014</a></li>
-<li><a href="http://act.qa-hackathon.org/qa2015">Berlin 2015</a></li>
-<li><a href="http://act.qa-hackathon.org/qa2016">Rugby 2016</a></li>
+<li><a href="http://perltoolchainsummit.org/qa2010">Vienna 2010</a></li>
+<li><a href="http://perltoolchainsummit.org/qa2011">Amsterdam 2011</a></li>
+<li><a href="http://perltoolchainsummit.org/qa2012">Paris 2012</a></li>
+<li><a href="http://perltoolchainsummit.org/qa2013">North West England 2013</a></li>
+<li><a href="http://perltoolchainsummit.org/qa2014">Lyon 2014</a></li>
+<li><a href="http://perltoolchainsummit.org/qa2015">Berlin 2015</a></li>
+<li><a href="http://perltoolchainsummit.org/qa2016">Rugby 2016</a></li>
 </ul>
 
 <p>These events were a great success for the Perl and Open Source communities, as well as the attendees.</p>
