--- a/actdocs/static/pqah.html
+++ b/actdocs/static/pqah.html
@@ -10,13 +10,13 @@
         <dl>
 <dd><a href="http://2008.qa-hackathon.org/">Oslo 2008</a></dd>
 <dd><a href="http://2009.qa-hackathon.org/">Birmingham 2009</a></dd>
-<dd><a href="http://2010.qa-hackathon.org/">Vienna 2010</a></dd>
-<dd><a href="http://2011.qa-hackathon.org/">Amsterdam 2011</a></dd>
-<dd><a href="http://2012.qa-hackathon.org/">Paris 2012</a></dd>
-<dd><a href="http://2013.qa-hackathon.org/">North West England 2013</a></dd>
-<dd><a href="http://act.qa-hackathon.org/qa2014">Lyon 2014</a></dd>
-<dd><a href="http://act.qa-hackathon.org/qa2015">Berlin 2015</a></dd>
-<dd><a href="http://act.qa-hackathon.org/qa2016">Rugby 2016</a></dd>
+<dd><a href="http://perltoolchainsummit.org/qa2010">Vienna 2010</a></dd>
+<dd><a href="http://perltoolchainsummit.org/qa2011">Amsterdam 2011</a></dd>
+<dd><a href="http://perltoolchainsummit.org/qa2012">Paris 2012</a></dd>
+<dd><a href="http://perltoolchainsummit.org/qa2013">North West England 2013</a></dd>
+<dd><a href="http://perltoolchainsummit.org/qa2014">Lyon 2014</a></dd>
+<dd><a href="http://perltoolchainsummit.org/qa2015">Berlin 2015</a></dd>
+<dd><a href="http://perltoolchainsummit.org/qa2016">Rugby 2016</a></dd>
         </dl>
 
 [% END %]
